# Sistemas_Operativos

./: .gitignore
docs/: lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx
lab01/: ej1a.c  ej1b.c  ej2.c  ej3.c
lab02/: Makefile  ej1a.c  ej1b.c  ej2a.c  ej2b.c  ej3a.c  ej5a.c  fork.c  ipc.c
lab03/: CMakeLists.txt  SudokuValidator.c  fake_sudoku
lab04/: CMakeLists.txt  simple.c
lab05/: casio_system.c  casio_task.c  errors  post_casio.txt  pre_casio.txt  proc_misc.c  sched.c  sched_casio.c
lab06/: CMakeLists.txt  log.txt  monitorlog.txt  monitors.cpp  monitors.h  semaphores.cpp
